# caledon

./: Cargo.toml  README.md  build.rs
.github/workflows/: audit.yml  ci.yml
caledon-build/: Cargo.toml
caledon-build/src/: codegen.rs  error.rs  generator.rs  lib.rs  model.rs
caledon-build/src/codegen/: doc.rs  interface.rs  message.rs  protocol.rs
design/: README.md  protocol.md
src/: client.rs  core.rs  lib.rs  registry.rs  server.rs
src/client/: callbacks.rs
src/core/: codec.rs  dispatch.rs  role.rs  store.rs  testutil.rs  transport.rs  wire.rs
