[package]
name = "caledon"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"
description = "Caledon is a Rust implemention of the Wayland protocol."
readme = "README.md"
repository = "https://github.com/sbosnick/caledon"
license = "MIT OR Apache-2.0"
categories = ["graphics", "gui", "rendering"]
keywords = ["wayland", "protocol"]

[dependencies]
bytes = "1.0.0"
fd-queue = "1.0.0-beta.3"
futures-core = "0.3.5"
futures-sink = "0.3.5"
pin-project = "1.0.0"
tokio = "1.0.0"
tokio-util = { version = "0.6.0", features = ["codec"] }
futures-util = "0.3.6"
snafu = "0.6.9"

[dev-dependencies]
assert_matches = "1.3.0"
futures = "0.3.5"
futures_ringbuf = "0.3.0"
ringbuf = "0.2.1"
tokio = {version = "1.0.0", features = ["macros", "rt-multi-thread"]}
tokio-util = { version = "0.6.0", features = ["compat"] }

[build-dependencies]
caledon-build = { path = "caledon-build" }

[workspace]
