[package]
name = "caledon-build"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
thiserror = "1.0.20"
itertools = "0.9.0"
quote = "1.0.7"
proc-macro2 = "1.0.24"
Inflector = "0.11.4"

[dev-dependencies]
log = "0.4.11"
simple_logger = "1.9.0"
assert_matches = "1.3.0"

# Pegging the maximum version of tempfile at 3.1.0 is necessary
# to avoid having to increase the MSRV to 1.40. Once we have
# increase the MSRV to 1.40 then we can remove this restriction.
tempfile = "<=3.1.0"

# remove_dir_all is a transitive dependency of tempfile that we
# do not use directly. We have an explicit dependency on it here
# that is pegged to a maximum version of 0.5.2 because later
# versions have an implicit MSRV of at least 1.40. It may
# be possible to remove this dependency entirely once we have
# increased the MSRV to 1.40.
remove_dir_all = "<=0.5.2"
