[package]
name = "caledon-build"
version = "0.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
thiserror = "1.0.20"
itertools = "0.10.0"
quote = "1.0.7"
proc-macro2 = "1.0.24"
Inflector = "0.11.4"

[dev-dependencies]
log = "0.4.11"
simple_logger = "1.9.0"
assert_matches = "1.3.0"
tempfile = "3.1.0"
